noinst_LTLIBRARIES = libutil.la

AUTOMAKE_OPTIONS = foreign

libutil_la_SOURCES = MyString.cpp MyString.h PassPtr.h RefCounted.h RefPtr.h StringBuffer.cpp StringBuffer.h StringBuilder.cpp StringBuilder.h StringImpl.cpp StringImpl.h

libutil_la_CPPFLAGS = -fPIC


export utilheaders = MyString.h PassPtr.h RefCounted.h RefPtr.h StringBuffer.h StringBuilder.h StringImpl.h
